# funccheck

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
src/funccheck/: __main__.py  cli.py  formatting.py  scanner.py
